chore: clean up app and global styles

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,9 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 a {
@@ -18,6 +21,14 @@ a {
 * {
   box-sizing: border-box;
 }
+#__next {
+  height: 100%;
+}
+#map {
+  height: 280px;
+}
+
+
 
 @media (prefers-color-scheme: dark) {
   html {
