--- a/css/style.css
+++ b/css/style.css
@@ -5,39 +5,13 @@
   box-sizing: border-box;
 }
 
-/* Nav Area */
-.top-bar {
-  width: 100%;
-  margin-top: 0;
-  position: relative;
-  height: 80px;
-  text-align: right;
-}
-#title {
-  position: absolute;
-  left: 20px;
-  top: 0;
-  display: inline-block;
-  height: 100%;
-}
-.nav {
-  height: 100%;
-  display: inline-block;
-}
-.nav a {
-  margin: 0 20px;
-  font-size: 120%;
-  height: 100%;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-}
 
-.grid {
+
+/* .grid {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-}
+} */
 
 /* Styles for Cards */
 .card {
